feat: more paper server patches